[tool.poetry]
name = "repl_python3_Paltube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
discord-pretty-help = "^1.3.3"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
function = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
